# ar_row-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
ar_row/: Cargo.toml  build.rs
ar_row/examples/: to_json.rs
ar_row/src/: array_iterators.rs  cpp-utils.hh  deserialize.rs  dictionaries.rs  kind.rs  lib.rs  memorypool.rs  parallel_row_iterator.rs  reader.rs  row_iterator.rs  structured_reader.rs  to_json.rs  vector.rs
ar_row/tests/: dict.rs  read_apache.rs  reader.rs  test_vector.rs
ar_row_derive/: Cargo.toml
ar_row_derive/src/: lib.rs
ar_row_derive/tests/: datatypes.rs  decimal.rs  dict.rs  kinds.rs  nulls.rs  parallel_row_iterator.rs  test1.rs  test_codegen.rs  timestamp.rs
ar_row_readme/: Cargo.toml
