[workspace]

members = [
    "ar_row",
    "ar_row_derive",
    "ar_row_readme",
]


[workspace.package]
version = "0.5.0"
authors = [
    "Software Heritage developers <swh-devel@inria.fr>"
]
rust-version = "1.63"
readme = "README.md"
homepage = "https://gitlab.softwareheritage.org/swh/devel/ar_row-rs"
repository = "https://gitlab.softwareheritage.org/swh/devel/ar_row-rs"
keywords = ["orc", "apache-orc", "proc-macros"]
categories = ["encoding", "parser-implementations"]

[workspace.dependencies]
ar_row = { version = "0.5.0", path = "ar_row/" }
ar_row_derive = { version = "0.5.0", path = "ar_row_derive/" }
rayon = "1.7.0"


[profile.release]
debug = 1
