[package]
name = "ar_row"
description = "Row-oriented access to Arrow arrays"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

license = "GPL-3.0-or-later"

[features]
# Defines a 'to_json' module which allows converting ORC files to JSON objects
json = ["dep:json", "dep:chrono"]

# Enable implementation of rayon's ParallelIterator
rayon = ["dep:rayon"]

[dependencies]
json = { version = "0.12.4", optional = true }
chrono = { version = "0.4.26", optional = true }
# TODO: Make rust_decimal optional
rust_decimal = "1.30.0"
thiserror = "1.0.48"
rayon = { workspace = true, optional = true }

[build-dependencies]
cxx-build = "1.0"
thiserror = "1.0.48"

[dev-dependencies]
flate2 = "1.0"
json = "0.12.4"
pretty_assertions = "1.3.0"
tempfile = "3.6.0"
