[package]
name = "ar_row"
description = "Row-oriented access to Arrow arrays"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

license = "GPL-3.0-or-later"

[features]

[dependencies]
arrow = "50.0.0"
chrono = { version = "0.4.26", optional = true }
# TODO: Make rust_decimal optional
rust_decimal = "1.30.0"
thiserror = "1.0.48"

[build-dependencies]
cxx-build = "1.0"
thiserror = "1.0.48"

[dev-dependencies]
flate2 = "1.0"
pretty_assertions = "1.3.0"
tempfile = "3.6.0"
