[package]
name = "ar_row_derive"
description = "Procedural macros from row-oriented access to Arrow arrays using ar_row."
version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[features]
chrono = ["dep:chrono"]

[dependencies]
ar_row.workspace = true
chrono = { version = "0.4.26", optional = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
unsafe_unwrap = "0.1.0"

[dev-dependencies]
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
datafusion-orc = { git = "https://github.com/datafusion-contrib/datafusion-orc.git", rev = "8c68f472a24c7ff12401ccdb3704991f0c7d080d" }
