[package]
name = "ar_row_readme"
description = "Pseudo-crate to run examples from the README."
version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

license = "GPL-3.0-or-later"

[lib]

[dependencies]
ar_row.workspace = true
ar_row_derive.workspace = true

[dev-dependencies]
orc-rust = { git = "https://github.com/datafusion-contrib/datafusion-orc.git", rev = "43eee096e1465a4d256422dcaeffdb4fb3e4e17f" }
